add email validation

--- a/essal/translations/ar.csv
+++ b/essal/translations/ar.csv
@@ -5977,3 +5977,4 @@ You will Receive an email with full details soon,سوف تستقبل بريدا 
 Company Name is Required,اسم الشركة باللغة الإنجليزية مطلوب
 Company name should consists of Alphabetic and numbers only.,يجب أن يحتوي اسم الشركة على الأحرف الإنجليزية والأرقام فقط.
 This Company Name is already used!,اسم الشركة المدخل مستخدم مسبقا
+{0} is not a valid Email address!,{0} ليس بريدا إلكترونيا صالحا
